test/functions/deitz/test_arg_type_is_value_error.chpl
var y: int;

proc f(x: y) {
  writeln(x);
}

f(y);
